add a reset form button to clear the form and result for another entry

--- a/index.html
+++ b/index.html
@@ -61,36 +61,39 @@
           </select>
         </div>
         <button type="submit" class="btn btn-success">Go!</button>
+        <button type="reset" value="Reset" onClick="window.location.reload()" class="btn btn-primary">Reset Form</button>
         <br>
       </form>
-      <div id="nature">
-        <h3><span class="name"></span>, you might enjoy visiting national parks!</h3>
-        <p>Suggestions include: The Grand Canyon in the US, Kruger National Park in South Africa,
-              or Machu Picchu in Peru.</p>
-        <img src="img/grandcanyonarizona.jpg">
-        <img src="img/krugersouthafrica.jpg">
-        <img src="img/machupicchuperu.jpg">
-      </div>
-      <div id="city">
-        <h3><span class="name"></span>, you might enjoy touring the big cities!</h3>
-        <p>Suggestions include: New York City in the US, Tokyo in Japan, or Singapore.</p>
-        <img src="img/newyork.jpg">
-        <img src="img/tokyo.jpg">
-        <img src="img/singapore.jpg">
-      </div>
-      <div id="snow">
-        <h3><span class="name"></span>, you might enjoy a snow-filled vacation!</h3>
-        <p>Suggestions include: Mammoth in the US, Whistler in Canada, or Cervinia in Italy.</p>
-        <img src="img/mammothcalifornia.jpg">
-        <img src="img/whistlercanada.jpg">
-        <img src="img/cerviniaitaly.jpg">
-      </div>
-      <div id="beach">
-        <h3><span class="name"></span>, you might enjoy relaxing at beach resorts!</h3>
-        <p>Suggestions include: Phuket in Thailand, Hawaii in US, or Cancun in Mexico.</p>
-        <img src="img/phuketthailand.jpg">
-        <img src="img/hawaii.jpg">
-        <img src="img/cancunmexico.jpg">
+      <div id="output">
+        <div id="nature">
+          <h3><span class="name"></span>, you might enjoy visiting national parks!</h3>
+          <p>Suggestions include: The Grand Canyon in the US, Kruger National Park in South Africa,
+                or Machu Picchu in Peru.</p>
+          <img src="img/grandcanyonarizona.jpg">
+          <img src="img/krugersouthafrica.jpg">
+          <img src="img/machupicchuperu.jpg">
+        </div>
+        <div id="city">
+          <h3><span class="name"></span>, you might enjoy touring the big cities!</h3>
+          <p>Suggestions include: New York City in the US, Tokyo in Japan, or Singapore.</p>
+          <img src="img/newyork.jpg">
+          <img src="img/tokyo.jpg">
+          <img src="img/singapore.jpg">
+        </div>
+        <div id="snow">
+          <h3><span class="name"></span>, you might enjoy a snow-filled vacation!</h3>
+          <p>Suggestions include: Mammoth in the US, Whistler in Canada, or Cervinia in Italy.</p>
+          <img src="img/mammothcalifornia.jpg">
+          <img src="img/whistlercanada.jpg">
+          <img src="img/cerviniaitaly.jpg">
+        </div>
+        <div id="beach">
+          <h3><span class="name"></span>, you might enjoy relaxing at beach resorts!</h3>
+          <p>Suggestions include: Phuket in Thailand, Hawaii in US, or Cancun in Mexico.</p>
+          <img src="img/phuketthailand.jpg">
+          <img src="img/hawaii.jpg">
+          <img src="img/cancunmexico.jpg">
+        </div>
       </div>
     </div>
   </body>
